fix(index): corrected submit button misspelled btn class

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="answer_message">Enter Answer:</p>
             <input type="number" id="answer_box">
         </div>
-        <button class="bt btn--gray">Submit Answer</button>
+        <button class="btn btn--gray">Submit Answer</button>
     </div>
 
     <div class="score_area">
