feat(index): added data-type attirbute to buttons

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
     <div class="game_area">
         <div class="controls_area">
-            <button class="btn btn--big btn--green">
+            <button data-type="addition" class="btn btn--big btn--green">
                 <span class="fas fa-plus"></span>
             </button>
-            <button class="btn btn--big btn--blue">
+            <button data-type="subtract" class="btn btn--big btn--blue">
                 <span class="fas fa-minus"></span>
             </button>
-            <button class="btn btn--big btn--orange">
+            <button data-type="multiply" class="btn btn--big btn--orange">
                 <span class="fas fa-times"></span>
             </button>
-            <button class="btn btn--big btn--red">
+            <button data-type="division" class="btn btn--big btn--red">
                 <span class="fas fa-divide"></span>
             </button>
         </div>
@@ -43,7 +43,7 @@
             <p class="answer_message">Enter Answer:</p>
             <input type="number" id="answer_box">
         </div>
-        <button class="btn btn--gray">Submit Answer</button>
+        <button data-type="submit" class="btn btn--gray">Submit Answer</button>
     </div>
 
     <div class="score_area">
