--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <p class="scores">Incorrect Answers: <span id="incorrect">0</span></p>
     </div>
 
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
