fix(index): changed title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Document</title>
+    <title>Love Maths</title>
 </head>
 
 <body>
